res/examples/invalid/let_decl_untyped_with_empty_list.eg
let a = [];

// out: TypeError: list declared with an unknown type e.g. let a = []; // list<unknown>